// fix center alignment company_description.sass

--- a/src/sass/main/company_description.sass
+++ b/src/sass/main/company_description.sass
@@ -4,6 +4,7 @@
 .company-description-core
   width: 100%
   max-width: 2400px
+  display: flex
   flex-direction: column
   align-items: center
   background-color: white
